@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<csv>
+  <row>
+    <NAME>Fred Smith</NAME>
+    <ADDRESS>1234 Main St.&#13;Anytown, USA   39103</ADDRESS>
+    <POINTS>123.4567</POINTS>
+  </row>
+  <row>
+    <NAME>Wayne &quot;The Great One&quot; Gretsky</NAME>
+    <ADDRESS>59 Hockey Lane</ADDRESS>
+    <POINTS>999999</POINTS>
+  </row>
+</csv>
