@@ -1,0 +1,2 @@
+NAME,ADDRESS,POINTSFred Smith,"1234 Main St.
+Anytown, USA   39103",123.4567"Wayne ""The Great One"" Gretsky",  59 Hockey Lane  , "999999"
