@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<csv>
+  <row>
+    <col1>Name With Spaces</col1>
+    <col2>#~!@#$%^&amp;*()</col2>
+    <col3>&amp;&lt;&gt;&amp;</col3>
+  </row>
+  <row>
+    <col1>aaa</col1>
+    <col2>bbb</col2>
+    <col3>ccc</col3>
+  </row>
+</csv>
